Add blog route and controller

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -162,8 +162,8 @@ form .user-details .input-box{
       <form action="/users/register" method="post" enctype="multipart/form-data">
         <div class="user-details">
           <div class="input-box">
-            <lable class="details" for="fullname">Full Name</lable>
-            <input type="text" placeholder="Enter your name" id="fullname" name="fullname" required>
+            <lable class="details" for="fullName">Full Name</lable>
+            <input type="text" placeholder="Enter your name" id="fullName" name="fullName" required>
           </div>
           <div class="input-box">
             <lable class="details" for="username">Username</lable>
@@ -174,8 +174,8 @@ form .user-details .input-box{
             <input type="text" placeholder="Enter your email"  id="email" name="email" required>
           </div>
           <div class="input-box">
-            <lable for="avatar" class="details" >Avatar Image</lable>
-            <input type="file" name="avatar" id="avatar"required>
+            <lable for="profilePic" class="details" >Profile Image</lable>
+            <input type="file" name="profilePic" id="profilePic"required>
           </div>
           <div class="input-box">
             <lable class="details" for="password">Password</lable>
